test/spec_vectors/load64/fail/module_27.wat
(module (memory i64 1) (func $load_f64 (f64.load (i64.const 0))))